resources/httpbin/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway # Use Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - httpbin.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: demo
spec:
  hosts:
    - "httpbin.local"
  gateways:
    - httpbin-gateway
  http:
    - match:
      - uri:
          prefix: /
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: "5xx,gateway-error,connect-failure,refused-stream,reset"
      timeout: 6s
      route:
      - destination:
          host: httpbin.demo.svc.cluster.local
          port:
            number: 80
        weight: 100
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: httpbin-dr
  namespace: demo
spec:
  host: httpbin.demo.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 15
      interval: 30s
      baseEjectionTime: 60s
      maxEjectionPercent: 100
